# resumai

./: .gitignore  .pylintrc  LICENSE  README.md  docker-compose.yml  nginx.conf  requirements.txt  setup_backend.sh  stack.yml
common/: applicant.py  applicant_schemas.py  pyproject.toml  redis_client.py
common/src/common/: applicant.py  applicant_data.py  applicant_schemas.py  celery_app.py  celery_types.py  job_updates.py  redis_client.py  redis_types.py  resume_templates.py
nginx/: nginx.conf  pre_ssl.conf
server_app/: Dockerfile  api_key_service.py  celery_app.py  communication_types.py  exceptions.py  main.py  message_enums.py  pubsub_message_service.py  requirements.txt  schemas.py  websocket_message_service.py  websocket_sync.py
server_app/applicant/: applicant_service.py  dependencies.py  routes.py  schemas.py
tool-ui/: index.html
tool-ui/src/: main.tsx  socketClient.ts  types.ts
tool-ui/src/components/: InfoWrapper.tsx  types.ts
tool_ui/: Dockerfile  nginx.conf  package-lock.json  package.json
tool_ui/src/: App.tsx  apiClient.ts  index.css  socketClient.ts  types.ts  utils.ts
tool_ui/src/components/: EditInfo.tsx
worker_app/: .example.env  Dockerfile.cleanup  Dockerfile.generator  celery_app.py  instructions.py  instructions_v2.py  main.py  requirements.txt  resume_generation_job.py  schemas.py
worker_app/ai_clients/: ai_client.py  anthropic_client.py  gemini_client.py  openai_client.py
worker_app/document_builder/: docx_writer.py  pdf_writer.py  resume_writer_interface.py  template_map.py  utils.py  writer_types.py
(+26 files in other folders)
